--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet">
+    <link href="./fontawesome-free-5.15.1-web/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Hire Marlon</title>
+    <title>Hire Marlon!</title>
 </head>
 <body>
     <div class="container">
@@ -85,32 +85,32 @@
             <h2>PROJECTS</h2>
             <div class="cards">
                 <div class="card">
-                    <img class="proj-img" src="/img/Screenshot 2020-10-30 155705.png" alt="">
+                    <img class="proj-img" src="./img/Screenshot 2020-10-30 155705.png" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="/img/Screenshot 2020-10-30 155832.png" alt="">
+                    <img class="proj-img" src="./img/Screenshot 2020-10-30 155832.png" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="/img/Screenshot 2020-10-30 155904.png" alt="">
+                    <img class="proj-img" src="./img/Screenshot 2020-10-30 155904.png" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="/img/Screenshot 2020-10-30 155929.png" alt="">
+                    <img class="proj-img" src="./img/Screenshot 2020-10-30 155929.png" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card hide">
-                    <img class="proj-img" src="/img/Screenshot 2020-10-30 160823.png" alt="">
+                    <img class="proj-img" src="./img/Screenshot 2020-10-30 160823.png" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card hide">
-                    <img class="proj-img" src="/img/Screenshot 2020-10-30 160823.png" alt="">
+                    <img class="proj-img" src="./img/Screenshot 2020-10-30 160823.png" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
