--- a/index.html
+++ b/index.html
@@ -90,32 +90,32 @@
             <h2>PROJECTS</h2>
             <div class="cards">
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot 2020-10-30 155705.png" alt="">
+                    <img class="proj-img" src="img/Screenshot-2020-10-30-155929.webp" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot 2020-10-30 155832.png" alt="">
+                    <img class="proj-img" src="img/Screenshot-2020-12-03-162733.webp" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot 2020-10-30 155904.png" alt="">
+                    <img class="proj-img" src="img/Screenshot-2020-10-30-155904.webp" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot 2020-10-30 155929.png" alt="">
+                    <img class="proj-img" src="img/Screenshot-2020-12-03-163324.webp" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card hide">
-                    <img class="proj-img" src="img/Screenshot 2020-10-30 160823.png" alt="">
+                    <img class="proj-img" src="img/Screenshot-2020-10-30-155832.webp" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
                 <div class="card hide">
-                    <img class="proj-img" src="img/Screenshot 2020-10-30 160823.png" alt="">
+                    <img class="proj-img" src="img/Screenshot-2020-10-30-160823.webp" alt="">
                     <h3>Project Title</h3>
                     <p>Project description...</p>
                 </div>
