--- a/index.html
+++ b/index.html
@@ -90,34 +90,53 @@
             <h2>PROJECTS</h2>
             <div class="cards">
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot-2020-10-30-155929.webp" alt="">
-                    <h3>Project Title</h3>
-                    <p>Project description...</p>
+                    <a href="#" class="proj-img-link">
+                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-155929.webp" alt="An empty to-do list">
+                    </a>
+                    <h3>To-Do List</h3>
+                    <p class="card-desc">Solid use of HTML, CSS, and JS. Local storage used to have changes persist.</p>
+                    
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot-2020-12-03-162733.webp" alt="">
-                    <h3>Project Title</h3>
-                    <p>Project description...</p>
+                    <a href="#" class="proj-img-link">
+                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-12-03-162733.webp" alt="Classic snake computer game">
+                    </a>
+                    <h3>Snake Game</h3>
+                    <p class="card-desc">A recreation of the Snake game. Used CSS grid to build the game area and snake.</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot-2020-10-30-155904.webp" alt="">
-                    <h3>Project Title</h3>
-                    <p>Project description...</p>
+                    <a href="#" class="proj-img-link">
+                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-155904.webp" alt="Empty window of a word counter">
+                    </a>
+                    <h3>Word Counter</h3>
+                    <p class="card-desc">A tool to count individual word occurrence in a body of text using regular expressions.</p>
                 </div>
                 <div class="card">
-                    <img class="proj-img" src="img/Screenshot-2020-12-03-163324.webp" alt="">
-                    <h3>Project Title</h3>
-                    <p>Project description...</p>
+                    <a href="#" class="proj-img-link">
+                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-12-03-163324.webp" alt="dark rectangle with the word fizzbuzz">
+                    </a>
+                    <h3>FizzBuzz Demo</h3>
+                    <p class="card-desc">Classic FizzBuzz problem and solution with some animation.</p>
                 </div>
                 <div class="card hide">
-                    <img class="proj-img" src="img/Screenshot-2020-10-30-155832.webp" alt="">
-                    <h3>Project Title</h3>
-                    <p>Project description...</p>
+                    <a href="#" class="proj-img-link">
+                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-155832.webp" alt="Hash marks of a tic-tac-toe game">
+                    </a>
+                    <h3>Tic-Tac-Toe</h3>
+                    <p class="card-desc">A game using pseudo-AI to play against a human player.</p>
                 </div>
                 <div class="card hide">
-                    <img class="proj-img" src="img/Screenshot-2020-10-30-160823.webp" alt="">
-                    <h3>Project Title</h3>
-                    <p>Project description...</p>
+                    <a href="#" class="proj-img-link">
+                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-160823.webp" alt="Microsoft desktop and calculator">
+                    </a>
+                    <h3>Windows Calculator</h3>
+                    <p class="card-desc">A recreation of the modern Windows 10 calculator.</p>
                 </div>
             </div>
             <div class="proj-footer">
