--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <div class="info">
                 <div class="mission">
                     <p>Served twenty years in the US Army performing signals intelligence (SIGINT),
-                        however, my passion is for web development. I simply want to create things and
-                        help others create things.
+                        however, my passion is for web development. I simply want to create awesome web apps and
+                        help others create awesome things.
                     </p>
                 </div>
                 <div class="credentials">
