--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="link" href="#projects">projects</a>
                 </li>
                 <li>
-                    <a class="link" href="#aboutme">about me</a>
+                    <a class="link" href="#aboutme">about</a>
                 </li>
             </ul>
         </nav>
@@ -32,11 +32,8 @@
         <!-- Page Header -->
         <header>
             <div class="greeting">
-                <h1 class="hello">HELLO</h1>
-                <p class="sub-banner">I'm <span class="name">Marlon</span></p>
-                <p class="sub-banner">Web Developer</p>
-                <p class="sub-banner">Veteran</p>
-                <p class="sub-banner">Father</p>
+                <h1 class="headline">Front-end Developer</h1>
+                <h2>Helping to create awesome websites!</h2>
             </div>
             <div class="cta">
                 <button class="btn">CONTACT ME</button>
@@ -45,39 +42,41 @@
 
         <!-- Talents -->
         <section class="talents" id="talents">
-            <h2>TALENTS</h2>
+            <h2 class="badge-header">TALENTS</h2>
             <div class="badges">
                 <div>
                     <div class="badge">
                         <i class="fab fa-html5"></i>
                     </div>
-                    <p>HTML</p>
+                    <p class="badge-txt">HTML</p>
                 </div>
                 <div>
                     <div class="badge">
                         <i class="fab fa-js-square"></i>
                     </div>
-                    <p>JAVASCRIPT</p>
+                    <p class="badge-txt">JAVASCRIPT</p>
                 </div>
                 <div>
                     <div class="badge">
                         <i class="fab fa-css3-alt"></i>
                     </div>
-                    <p>CSS</p>
+                    <p class="badge-txt">CSS</p>
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-bars">
-                    <p>KNOWLEDGE</p>
+                    <h3>KNOWLEDGE</h3>
                     <p class="skill-bar js">JavaScript</p>
-                    <p class="skill-bar html">HTML</p>
-                    <p class="skill-bar css">CSS</p>
+                    <p class="skill-bar html">HTML5</p>
+                    <p class="skill-bar css">CSS3</p>
                 </div>
                 <div class="skill-description">
                     <p>Continuously learning! Other skills include:
                         <ul class="skills-other">
                             <li>jQuery</li>
                             <li>Bootstrap</li>
+                            <li>Figma</li>
+                            <li>Photoshop</li>
                             <li>Python</li>
                         </ul>
                     </p>
@@ -90,11 +89,11 @@
             <h2>PROJECTS</h2>
             <div class="cards">
                 <div class="card">
-                    <a href="#" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/zYxpKEO" target="_blank" class="proj-img-link">
                         <div class="overlay"><i class="fas fa-eye"></i> View code</div>
                         <img class="proj-img" src="img/Screenshot-2020-10-30-155929.webp" alt="An empty to-do list">
                     </a>
-                    <h3>To-Do List</h3>
+                    <h3 class="card-title">To-Do List</h3>
                     <p class="card-desc">Solid use of HTML, CSS, and JS. Local storage used to have changes persist.</p>
                     
                 </div>
@@ -103,7 +102,7 @@
                         <div class="overlay"><i class="fas fa-eye"></i> View code</div>
                         <img class="proj-img" src="img/Screenshot-2020-12-03-162733.webp" alt="Classic snake computer game">
                     </a>
-                    <h3>Snake Game</h3>
+                    <h3 class="card-title">Snake Game</h3>
                     <p class="card-desc">A recreation of the Snake game. Used CSS grid to build the game area and snake.</p>
                 </div>
                 <div class="card">
@@ -111,7 +110,7 @@
                         <div class="overlay"><i class="fas fa-eye"></i> View code</div>
                         <img class="proj-img" src="img/Screenshot-2020-10-30-155904.webp" alt="Empty window of a word counter">
                     </a>
-                    <h3>Word Counter</h3>
+                    <h3 class="card-title">Word Counter</h3>
                     <p class="card-desc">A tool to count individual word occurrence in a body of text using regular expressions.</p>
                 </div>
                 <div class="card">
@@ -119,15 +118,15 @@
                         <div class="overlay"><i class="fas fa-eye"></i> View code</div>
                         <img class="proj-img" src="img/Screenshot-2020-12-03-163324.webp" alt="dark rectangle with the word fizzbuzz">
                     </a>
-                    <h3>FizzBuzz Demo</h3>
+                    <h3 class="card-title">FizzBuzz Demo</h3>
                     <p class="card-desc">Classic FizzBuzz problem and solution with some animation.</p>
                 </div>
                 <div class="card hide">
-                    <a href="#" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/JjXJGro?editors=0110" target="_blank" class="proj-img-link">
                         <div class="overlay"><i class="fas fa-eye"></i> View code</div>
                         <img class="proj-img" src="img/Screenshot-2020-10-30-155832.webp" alt="Hash marks of a tic-tac-toe game">
                     </a>
-                    <h3>Tic-Tac-Toe</h3>
+                    <h3 class="card-title">Tic-Tac-Toe</h3>
                     <p class="card-desc">A game using pseudo-AI to play against a human player.</p>
                 </div>
                 <div class="card hide">
@@ -135,12 +134,12 @@
                         <div class="overlay"><i class="fas fa-eye"></i> View code</div>
                         <img class="proj-img" src="img/Screenshot-2020-10-30-160823.webp" alt="Microsoft desktop and calculator">
                     </a>
-                    <h3>Windows Calculator</h3>
+                    <h3 class="card-title">Windows Calculator</h3>
                     <p class="card-desc">A recreation of the modern Windows 10 calculator.</p>
                 </div>
             </div>
             <div class="proj-footer">
-                <a href="#" class="view-more">View More...</a>
+                <a href="#" class="view-more btn">View More</a>
             </div>
         </section>
 
