--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Front-end Developer portfolio">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -71,15 +71,14 @@
                     <p class="skill-bar css">CSS3</p>
                 </div>
                 <div class="skill-description">
-                    <p>Continuously learning! Other skills include:
-                        <ul class="skills-list">
-                            <li>jQuery</li>
-                            <li>Bootstrap</li>
-                            <li>Figma</li>
-                            <li>Photoshop</li>
-                            <li>Python</li>
-                        </ul>
-                    </p>
+                    <p>Continuously learning! Other skills include:</p>
+                    <ul class="skills-list">
+                        <li>jQuery</li>
+                        <li>Bootstrap</li>
+                        <li>Figma</li>
+                        <li>Photoshop</li>
+                        <li>Python</li>
+                    </ul>
                 </div>
             </div>
         </section>
