--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Front-end Developer portfolio">
+    <meta name="keywords" content="Web Development, Front-end Developer, Portfolio, HTML, CSS, JavaScript">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="fontawesome-free-5.15.1-web/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Hire Marlon!</title>
 </head>
@@ -16,15 +17,15 @@
             <div class="page-top">
                 <span class="top-name">marlon clark</span>
             </div>
-            <ul class="links">
+            <ul class="nav-links">
                 <li>
-                    <a class="link" href="#talents">talents</a>
+                    <a class="nav-link" href="#talents">talents</a>
                 </li>
                 <li>
-                    <a class="link" href="#projects">projects</a>
+                    <a class="nav-link" href="#projects">projects</a>
                 </li>
                 <li>
-                    <a class="link" href="#aboutme">about</a>
+                    <a class="nav-link" href="#aboutme">about</a>
                 </li>
             </ul>
         </nav>
@@ -46,21 +47,18 @@
             <div class="badges">
                 <div>
                     <div class="badge">
-                        <i class="fab fa-html5"></i>
+                        <img class="badge" src="assets/html-5-retro-circular-badge.svg" alt="html5 badge">
                     </div>
-                    <p class="badge-txt">HTML</p>
                 </div>
                 <div>
                     <div class="badge">
-                        <i class="fab fa-js-square"></i>
+                        <img class="badge" src="assets/js.svg" alt="html5 badge">
                     </div>
-                    <p class="badge-txt">JAVASCRIPT</p>
                 </div>
                 <div>
                     <div class="badge">
-                        <i class="fab fa-css3-alt"></i>
+                        <img class="badge" src="assets/css.svg" alt="html5 badge">
                     </div>
-                    <p class="badge-txt">CSS</p>
                 </div>
             </div>
             <div class="skills">
@@ -89,8 +87,9 @@
             <div class="cards">
                 <div class="card">
                     <a href="https://codepen.io/marz0008/pen/zYxpKEO" target="_blank" class="proj-img-link">
-                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
-                        <img class="proj-img" src="img/Screenshot-2020-10-30-155929.webp" alt="An empty to-do list">
+                        <div class="overlay"><img src="assets/view.svg" alt="eye"> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-155929.webp" 
+                        loading="lazy" alt="An empty to-do list">
                     </a>
                     <h3 class="card-title">To-Do List</h3>
                     <p class="card-desc">Solid use of HTML, CSS, and JS. Local storage used to have changes persist.</p>
@@ -98,40 +97,45 @@
                 </div>
                 <div class="card">
                     <a href="https://codepen.io/marz0008/pen/LYNgydb" target="_blank" class="proj-img-link">
-                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
-                        <img class="proj-img" src="img/Screenshot-2020-12-03-162733.webp" alt="Classic snake computer game">
+                        <div class="overlay"><img src="assets/view.svg" alt="eye"> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-12-03-162733.webp" 
+                        loading="lazy" alt="Classic snake computer game">
                     </a>
                     <h3 class="card-title">Snake Game</h3>
                     <p class="card-desc">A recreation of the Snake game. Used CSS grid to build the game area and snake.</p>
                 </div>
                 <div class="card">
                     <a href="https://codepen.io/marz0008/pen/RwapQBO" target="_blank" class="proj-img-link">
-                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
-                        <img class="proj-img" src="img/Screenshot-2020-10-30-155904.webp" alt="Empty window of a word counter">
+                        <div class="overlay"><img src="assets/view.svg" alt="eye"> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-155904.webp" 
+                            loading="lazy" alt="Empty window of a word counter">
                     </a>
                     <h3 class="card-title">Word Counter</h3>
                     <p class="card-desc">A tool to count individual word occurrence in a body of text using regular expressions.</p>
                 </div>
                 <div class="card">
                     <a href="https://codepen.io/marz0008/pen/XWJVXRv" target="_blank" class="proj-img-link">
-                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
-                        <img class="proj-img" src="img/Screenshot-2020-12-03-163324.webp" alt="dark rectangle with the word fizzbuzz">
+                        <div class="overlay"><img src="assets/view.svg" alt="eye"> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-12-03-163324.webp" 
+                        loading="lazy" alt="dark rectangle with the word fizzbuzz">
                     </a>
                     <h3 class="card-title">FizzBuzz Demo</h3>
                     <p class="card-desc">Classic FizzBuzz problem and solution with some animation.</p>
                 </div>
                 <div class="card hide">
                     <a href="https://codepen.io/marz0008/pen/JjXJGro?editors=0110" target="_blank" class="proj-img-link">
-                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
-                        <img class="proj-img" src="img/Screenshot-2020-10-30-155832.webp" alt="Hash marks of a tic-tac-toe game">
+                        <div class="overlay"><img src="assets/view.svg" alt="eye"> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-155832.webp" 
+                        loading="lazy" alt="Hash marks of a tic-tac-toe game">
                     </a>
                     <h3 class="card-title">Tic-Tac-Toe</h3>
                     <p class="card-desc">A game using pseudo-AI to play against a human player.</p>
                 </div>
                 <div class="card hide">
                     <a href="https://codepen.io/marz0008/pen/WNbXGgW" target="_blank" class="proj-img-link">
-                        <div class="overlay"><i class="fas fa-eye"></i> View code</div>
-                        <img class="proj-img" src="img/Screenshot-2020-10-30-160823.webp" alt="Microsoft desktop and calculator">
+                        <div class="overlay"><img src="assets/view.svg" alt="eye"> View code</div>
+                        <img class="proj-img" src="img/Screenshot-2020-10-30-160823.webp" 
+                        loading="lazy" alt="Microsoft desktop and calculator">
                     </a>
                     <h3 class="card-title">Windows Calculator</h3>
                     <p class="card-desc">A recreation of the modern Windows 10 calculator.</p>
@@ -139,7 +143,7 @@
             </div>
             <div class="proj-footer">
                 <a href="https://codepen.io/marz0008" target="_blank" class="view-more btn">View More</a>
-            </div>`
+            </div>
         </section>
 
         <!-- About Me -->
@@ -165,10 +169,10 @@
                 <a href="#contact" class="btn">CONTACT ME</a>
             </div>
             <div class="social">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/MarlonClark" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-codepen"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="www.linkedin.com/in/marlon-clark-8189b095/" target="_blank"><img class="social-logo" src="assets/linkedin.svg" alt="LinkedIn logo"></a>
+                <a href="https://github.com/MarlonClark" target="_blank"><img class="social-logo" src="assets/github.svg" alt="Github logo"></a>
+                <a href="https://codepen.io/marz0008" target="_blank"><img class="social-logo" src="assets/codepen.svg" alt="Codepen logo"></a>
+                <a href="https://twitter.com/Marz0008" target="_blank"><img class="social-logo" src="assets/twitter.svg" alt="Twitter logo"></a>
             </div>
         </section>
 
