--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Navigation (Fixed to top) -->
         <nav>
             <div class="page-top">
-                <span class="top-name">marlon clark</span>1
+                <span class="top-name">marlon clark</span>
             </div>
             <ul class="nav-links">
                 <li>
