--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
             <h2  class="section-title">PROJECTS</h2>
             <div class="cards">
                 <div class="card">
-                    <a href="https://codepen.io/marz0008/pen/zYxpKEO" target="_blank" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/zYxpKEO" target="_blank" 
+                        class="proj-img-link" rel="noopener">
                         <div class="overlay"><img src="img/icons/view.svg" alt="eye"> View code</div>
                         <img class="proj-img" src="img/projects/Screenshot-2020-10-30-155929.webp" 
                         loading="lazy" alt="An empty to-do list">
@@ -96,7 +97,8 @@
                     
                 </div>
                 <div class="card">
-                    <a href="https://codepen.io/marz0008/pen/LYNgydb" target="_blank" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/LYNgydb" target="_blank" 
+                    class="proj-img-link" rel="noopener">
                         <div class="overlay"><img src="img/icons/view.svg" alt="eye"> View code</div>
                         <img class="proj-img" src="img/projects/Screenshot-2020-12-03-162733.webp" 
                         loading="lazy" alt="Classic snake computer game">
@@ -105,7 +107,8 @@
                     <p class="card-desc">A recreation of the Snake game. Used CSS grid to build the game area and snake.</p>
                 </div>
                 <div class="card">
-                    <a href="https://codepen.io/marz0008/pen/RwapQBO" target="_blank" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/RwapQBO" target="_blank" 
+                    class="proj-img-link" rel="noopener">
                         <div class="overlay"><img src="img/icons/view.svg" alt="eye"> View code</div>
                         <img class="proj-img" src="img/projects/Screenshot-2020-10-30-155904.webp" 
                             loading="lazy" alt="Empty window of a word counter">
@@ -114,7 +117,8 @@
                     <p class="card-desc">A tool to count individual word occurrence in a body of text using regular expressions.</p>
                 </div>
                 <div class="card">
-                    <a href="https://codepen.io/marz0008/pen/XWJVXRv" target="_blank" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/XWJVXRv" target="_blank" 
+                    class="proj-img-link" rel="noopener">
                         <div class="overlay"><img src="img/icons/view.svg" alt="eye"> View code</div>
                         <img class="proj-img" src="img/projects/Screenshot-2020-12-03-163324.webp" 
                         loading="lazy" alt="dark rectangle with the word fizzbuzz">
@@ -123,7 +127,8 @@
                     <p class="card-desc">Classic FizzBuzz problem and solution with some animation.</p>
                 </div>
                 <div class="card hide">
-                    <a href="https://codepen.io/marz0008/pen/JjXJGro?editors=0110" target="_blank" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/JjXJGro?editors=0110" target="_blank" 
+                    class="proj-img-link" rel="noopener">
                         <div class="overlay"><img src="img/icons/view.svg" alt="eye"> View code</div>
                         <img class="proj-img" src="img/projects/Screenshot-2020-10-30-155832.webp" 
                         loading="lazy" alt="Hash marks of a tic-tac-toe game">
@@ -132,7 +137,8 @@
                     <p class="card-desc">A game using pseudo-AI to play against a human player.</p>
                 </div>
                 <div class="card hide">
-                    <a href="https://codepen.io/marz0008/pen/WNbXGgW" target="_blank" class="proj-img-link">
+                    <a href="https://codepen.io/marz0008/pen/WNbXGgW" target="_blank" 
+                    class="proj-img-link" rel="noopener">
                         <div class="overlay"><img src="img/icons/view.svg" alt="eye"> View code</div>
                         <img class="proj-img" src="img/projects/Screenshot-2020-10-30-160823.webp" 
                         loading="lazy" alt="Microsoft desktop and calculator">
@@ -169,16 +175,16 @@
                 <a href="#contact" class="btn">CONTACT ME</a>
             </div>
             <div class="social">
-                <a href="www.linkedin.com/in/marlon-clark-8189b095/" target="_blank">
+                <a href="https://www.linkedin.com/in/marlon-clark-0008" target="_blank" rel="noopener">
                     <img class="social-logo" src="img/icons/linkedin.svg" alt="LinkedIn logo">
                 </a>
-                <a href="https://github.com/MarlonClark" target="_blank">
+                <a href="https://github.com/MarlonClark" target="_blank" rel="noopener">
                     <img class="social-logo" src="img/icons/github.svg" alt="Github logo">
                 </a>
-                <a href="https://codepen.io/marz0008" target="_blank">
+                <a href="https://codepen.io/marz0008" target="_blank" rel="noopener">
                     <img class="social-logo" src="img/icons/codepen.svg" alt="Codepen logo">
                 </a>
-                <a href="https://twitter.com/Marz0008" target="_blank">
+                <a href="https://twitter.com/Marz0008" target="_blank" rel="noopener">
                     <img class="social-logo" src="img/icons/twitter.svg" alt="Twitter logo">
                 </a>
             </div>
