--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="proj-footer">
-                <a href="https://codepen.io/marz0008" target="_blank" class="view-more btn">View More</a>
+                <a href="https://codepen.io/marz0008" target="_blank" class="view-more btn" rel="noopener">View More</a>
             </div>
         </section>
 
