--- a/index.html
+++ b/index.html
@@ -64,12 +64,24 @@
             <div class="skills">
                 <div class="skill-bars">
                     <h3 class="skills-bar-title">KNOWLEDGE</h3>
-                    <p class="skill-bar js">JavaScript</p>
-                    <p class="skill-bar html">HTML5</p>
-                    <p class="skill-bar css">CSS3</p>
+                    <div class="skill-bar js">
+                        <span class="skill-name">JavaScript</span>
+                        <span class="skill-percent">90%</span>
+                    </div>
+                    <div class="skill-bar html">
+                        <span class="skill-name">HTML5</span>
+                        <span class="skill-percent">100%</span>
+                    </div>
+                    <div class="skill-bar css">
+                        <span class="skill-name">CSS3</span>
+                        <span class="skill-percent">85%</span>
+                    </div>
                 </div>
                 <div class="skill-description">
-                    <p>Continuously learning! Other skills include:</p>
+                    <p>Continuously learning! There are a lot of new and fancy libraries and frameworks to use in web 
+                        development. However, nearly all rely on the fundamental building blocks of JavaScript, CSS, or HTML.
+                        I am a life-long learner striving to stay in the forefront of it all.
+                        Other skills include:</p>
                     <ul class="skills-list">
                         <li>jQuery</li>
                         <li>Bootstrap</li>
@@ -167,7 +179,7 @@
                         <li>BS in Digital Media &amp; Web Technology</li>
                         <li>Top Secret Clearance (TS/SCI) w/ Poly</li>
                         <li>Extensive Self-Instruction</li>
-                        <li>scrimba</li>
+                        <li>Operational Experience</li>
                     </ul>
                 </div>
             </div>
