--- a/index.html
+++ b/index.html
@@ -169,18 +169,26 @@
             <h2  class="section-title light">ABOUT ME</h2>
             <div class="info">
                 <div class="mission">
-                    <p>Served twenty years in the US Army performing signals intelligence (SIGINT),
+                    <p>I served twenty years in the US Army performing signals intelligence (SIGINT),
                         however, my passion is for web development. I simply want to create awesome web apps and
-                        help others create awesome things.
+                        help others create awesome things. My experience in the military has provided me 
+                        the opportunity to lead teams, adhere to strict deadlines, see the value in efficient
+                        communication, witness and adapt to different cultures, among much more. I wish I could
+                        say I have x years of computer programming or development experience, but I do have the
+                        drive to learn and continuously improve.
                     </p>
                 </div>
                 <div class="credentials">
                     <ul class="cred-list">
                         <li>BS in Digital Media &amp; Web Technology</li>
+                        <li>AA in Information Technology / Programming</li>
                         <li>Top Secret Clearance (TS/SCI) w/ Poly</li>
                         <li>Extensive Self-Instruction</li>
                         <li>Operational Experience</li>
                     </ul>
+                    <div class="cta">
+                        <a href="docs/Marlon_Clark_Resume2.pdf" class="btn" target="_blank">Download Resume</a>
+                    </div>
                 </div>
             </div>
             <div class="cta">
